# cpp-assignment

./: CMakeLists.txt  README.md
src/: main.cpp
src/screen/: Screen.cpp  Screen.hpp
src/setting/: Setting.cpp  Setting.hpp  Setting.text
src/simulation/: Simulation.cpp  Simulation.hpp  Simulation.text
